# slop

./: Cargo.toml  justfile
.github/workflows/: ci.yaml
src/: arguments.rs  highlighter.rs  job.rs  main.rs  passage.rs
src/job/: replace.rs
