[package]
name = "slop"
version = "0.0.0"
edition = "2024"
license = "CC0-1.0"
description = "An AI Slopprentice"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
comrak = "0.35.0"
dirs = "6.0.0"
llm = { version = "1.0.9", features = ["anthropic"] }
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_with = "3.12.0"
serde_yaml = "0.9.34"
syntect = "5.2.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5.0"
